# SRF_Conference_Insights

./: .gitignore  .pre-commit-config.yaml  ADVANCED_GUIDE.md  API.md  CHANGELOG.md  CI_FIX_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FINAL_QUALITY_CHECK.md  GITHUB_ACTIONS_FIX.md  LICENSE  OPTIMIZATION_REPORT.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  config.json  docker-compose.yml  pdf_extractor.py  pdf_splitter.py  pdf_splitter_simple.py  pyproject.toml  requirements.txt  setup.cfg  srf_conference_insights_cli.py  verify_data.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
conferences/HIAT2025/: hiat2025_data.json  hiat2025_extractor.py  papers.json  statistics.json
conferences/HIAT2025/processed/: index.json
conferences/IPAC2025/: analyze_real_data.py  improved_real_crawler.py  papers.json
conferences/IPAC2025/individual_papers/: IPAC25_7000.json  IPAC25_7001.json  IPAC25_7002.json  IPAC25_7003.json  IPAC25_7004.json  IPAC25_7005.json  IPAC25_7006.json  IPAC25_7007.json  IPAC25_7008.json  IPAC25_7009.json  IPAC25_8000.json  IPAC25_8001.json  IPAC25_8002.json  IPAC25_8003.json  IPAC25_8004.json  IPAC25_8005.json  IPAC25_8006.json  IPAC25_8007.json  IPAC25_8008.json  IPAC25_8009.json  IPAC25_8010.json  IPAC25_8011.json  IPAC25_8012.json  IPAC25_8013.json  IPAC25_8014.json  IPAC25_8015.json  IPAC25_8016.json  IPAC25_8017.json  IPAC25_8018.json  IPAC25_8019.json  IPAC25_8020.json  IPAC25_8021.json  IPAC25_8022.json  IPAC25_8023.json  IPAC25_8024.json  IPAC25_8025.json  IPAC25_8026.json  IPAC25_8027.json  IPAC25_8028.json  IPAC25_8029.json  (+61 more)
conferences/IPAC2025/processed/: index.json
conferences/aggregate/: all_conferences_index.json
docs/: ERROR_FIX_REPORT.md  LAYOUT_FIX_REPORT.md  QUICKSTART.md  README.md  SIMPLIFICATION_COMPARISON.md  app-simple.js  combined_conference_data.json  index.html  test-app.html  test-data.html  test.html
docs/data/: combine_conferences.py  ipac2025_papers.json  papers-combined.json  papers-medium.json  papers-simple.json
examples/: complete_demo.py
scripts/: dev_server.py  prepare_data.py
tests/: conftest.py  test_crawlers.py  test_extractors.py  test_performance.py
