[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srf-conference-insights"
version = "1.0.0"
description = "A comprehensive system for analyzing and visualizing Superconducting Radio Frequency (SRF) conference papers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SRF Conference Insights Team"},
]
keywords = ["SRF", "conference", "papers", "analysis", "visualization", "accelerator", "physics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "PyMuPDF>=1.20.0",
    "Pillow>=9.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/iuming/SRF_Conference_Insights"
Repository = "https://github.com/iuming/SRF_Conference_Insights"
Documentation = "https://iuming.github.io/SRF_Conference_Insights/"
"Bug Tracker" = "https://github.com/iuming/SRF_Conference_Insights/issues"
