"""
SRF Conference Insights - Project Configuration File

This TOML file defines the project metadata, dependencies, and build configuration
for the SRF Conference Insights package.

Author: Ming Liu <mliu@ihep.ac.cn>
Project: SRF Conference Insights  
Institution: Institute of High Energy Physics, Chinese Academy of Sciences
"""

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srf-conference-insights"
version = "1.0.0"
description = "AI-powered analysis platform for Superconducting Radio Frequency (SRF) conference papers with real-time web scraping and interactive visualization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ming Liu", email = "mliu@ihep.ac.cn"},
    {name = "SRF Conference Insights Contributors"},
]
maintainers = [
    {name = "Ming Liu", email = "mliu@ihep.ac.cn"},
]
keywords = [
    "SRF", 
    "superconducting", 
    "radio-frequency", 
    "conference", 
    "papers", 
    "analysis", 
    "visualization", 
    "accelerator", 
    "physics",
    "IPAC",
    "HIAT",
    "web-scraping",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Text Processing :: Markup :: HTML",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "openpyxl>=3.0.0", 
    "PyMuPDF>=1.20.0",
    "Pillow>=9.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
visualization = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
]
analysis = [
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0",
]

[project.scripts]
srf-insights = "srf_conference_insights.cli:main"

[project.urls]
Homepage = "https://github.com/iuming/SRF_Conference_Insights"
Repository = "https://github.com/iuming/SRF_Conference_Insights.git"
Documentation = "https://iuming.github.io/SRF_Conference_Insights/"
"Bug Tracker" = "https://github.com/iuming/SRF_Conference_Insights/issues"
"Demo Site" = "https://iuming.github.io/SRF_Conference_Insights/"
"Wiki" = "https://github.com/iuming/SRF_Conference_Insights/wiki"

[tool.setuptools.packages.find]
where = ["."]
include = ["conferences*", "docs*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=conferences --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
